# MimerPy

./: .gitattributes  .gitignore  LICENSE.txt  MANIFEST.in  README.md  README.rst  dist-requirements.txt  ebuild.sh  pyproject.toml  setup.cfg  setup.py  test.py
doc/: Connection.rst  Cursor.rst  Makefile  README.txt  codeexamples.rst  conf.py  datatypes.rst  dbtest.py  exceptions.rst  gettingstarted.rst  index.rst  installationguide.rst  introduction.rst  legalnotice.rst  make_for_windows.bat  mimerpy.rst  output.txt  releasenotes.rst  test.py  userguide.rst
doc/_static/: style.css
doc/codeexamples/: connectionExample.py
mimerpy/: __init__.py  __main__.py  connectionPy.py  cursorPy.py  mimPyExceptionHandler.py  mimPyExceptions.py  pool.py
scripts/: ebuild.sh  ubuntuAutoRelease.sh  windowsAutoRelease.bat
src/: connection.c  cursor.c  mimerapi.c
src/mimerpy/: __init__.py  __main__.py  connectionPy.py  cursorPy.py  mimPyErrorCodes.py  mimPyExceptionHandler.py  mimPyExceptions.py  mimerapi.c  mimerapi.py  pool.py  utils.py
tests/: db_config.py  dropdb.py  testConnection.py  testCursor.py  testMimerPool.py  testMonkey.py  testScrollCursor.py  testTrace.py  testutils.py
